--- a/app/src/main/res/layout/dialog_edit_author.xml
+++ b/app/src/main/res/layout/dialog_edit_author.xml
@@ -105,10 +105,10 @@
                     />
 
                 <TextView
-                    android:id="@+id/blurb"
                     style="@style/Text.Body"
-                    android:textAppearance="?attr/textAppearanceBodySmall"
+                    android:layout_marginTop="@dimen/section_margin_top"
                     android:text="@string/warning_immediate_global_changes"
+                    android:textAppearance="?attr/textAppearanceBodySmall"
                     app:layout_constraintStart_toStartOf="@id/lbl_family_name"
                     app:layout_constraintTop_toBottomOf="@id/cbx_is_complete"
                     />
