--- a/app/src/main/res/layout/dialog_edit_author.xml
+++ b/app/src/main/res/layout/dialog_edit_author.xml
@@ -120,17 +120,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/section_margin_top"
-                    android:text="@string/lbl_this_author_is_a_pseudonym_for"
+                    android:text="@string/lbl_author_pseudonym"
                     app:layout_constraintStart_toStartOf="@id/flow_names"
                     app:layout_constraintTop_toBottomOf="@id/cbx_is_complete"
                     />
 
+                <!-- NO hint text! -->
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/lbl_real_author"
                     style="@style/TIL.AutoCompleteTextView"
                     android:layout_width="@dimen/til_fixed_width_personal_name"
                     android:layout_marginTop="@dimen/section_margin_top"
-                    android:hint="@string/lbl_author"
                     app:layout_constraintStart_toStartOf="@id/lbl_family_name"
                     app:layout_constraintTop_toBottomOf="@id/lbl_real_author_header"
                     >
