--- a/app/src/main/res/layout/fragment_sync_export.xml
+++ b/app/src/main/res/layout/fragment_sync_export.xml
@@ -124,7 +124,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/section_margin_top"
-            android:text="@string/btn_start_export"
+            android:text="@string/action_start_export"
             app:icon="@drawable/ic_baseline_start_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.9"
