--- a/app/src/main/res/layout/dialog_edit_bookshelf_filters.xml
+++ b/app/src/main/res/layout/dialog_edit_bookshelf_filters.xml
@@ -37,7 +37,7 @@
             android:id="@+id/toolbar"
             style="@style/Toolbar.Dialog"
             app:menu="@menu/toolbar_edit_filters"
-            app:title="@string/pg_filters"
+            app:title="@string/lbl_filters"
             />
 
     </com.google.android.material.appbar.AppBarLayout>
