--- a/app/src/main/res/layout/fragment_edit_book_external_id.xml
+++ b/app/src/main/res/layout/fragment_edit_book_external_id.xml
@@ -173,7 +173,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/section_margin_top"
             android:checked="true"
-            android:text="@string/lbl_auto_updates"
+            android:text="@string/option_auto_updates"
             app:layout_constraintStart_toStartOf="@id/barrier_ext_id"
             app:layout_constraintTop_toBottomOf="@id/barrier_ext_id"
             />
