--- a/app/src/main/res/xml/preferences_images.xml
+++ b/app/src/main/res/xml/preferences_images.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2021 HardBackNutter
+  ~ @Copyright 2018-2022 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -22,7 +22,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory
-        android:title="@string/camera">
+        android:title="@string/pc_camera">
 
         <!-- default rotate 0 degrees -->
         <ListPreference
@@ -45,7 +45,7 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:title="@string/menu_cover_crop">
+        android:title="@string/option_cover_crop">
 
         <SwitchPreference
             android:defaultValue="false"
@@ -58,7 +58,7 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:title="@string/pg_image_cache">
+        android:title="@string/pc_image_cache">
 
         <SwitchPreference
             android:defaultValue="false"
