--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -66,7 +66,7 @@
         </Preference>
 
         <SwitchPreference
-            android:defaultValue="false"
+            android:defaultValue="true"
             android:icon="@drawable/ic_baseline_data_usage_24"
             android:key="network.allow.metered"
             android:summaryOff="@string/no"
