--- a/app/src/main/res/layout/row_edit_searchsite.xml
+++ b/app/src/main/res/layout/row_edit_searchsite.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2021 HardBackNutter
+  ~ @Copyright 2018-2022 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -49,14 +49,14 @@
         >
 
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/website_name"
             style="@style/RowEditor.Text.Primary"
             tools:ignore="SelectableText"
             tools:text="@sample/data.json/sites/name"
             />
 
         <TextView
-            android:id="@+id/info"
+            android:id="@+id/website_search_capabilities"
             style="@style/RowEditor.Text.Secondary"
             android:visibility="gone"
             tools:ignore="SelectableText"
