--- a/app/src/main/res/layout/row_edit_preferred_styles.xml
+++ b/app/src/main/res/layout/row_edit_preferred_styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2021 HardBackNutter
+  ~ @Copyright 2018-2022 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -49,7 +49,7 @@
         >
 
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/style_name"
             style="@style/RowEditor.Text.Primary"
             tools:ignore="SelectableText"
             tools:text="@sample/data.json/styles/name"
