--- a/app/src/main/res/layout/row_edit_bookshelf.xml
+++ b/app/src/main/res/layout/row_edit_bookshelf.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2021 HardBackNutter
+  ~ @Copyright 2018-2022 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -30,7 +30,7 @@
     >
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/bookshelf_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/field_margin_start"
