--- a/app/src/main/res/layout/booksonbookshelf_group_level_1.xml
+++ b/app/src/main/res/layout/booksonbookshelf_group_level_1.xml
@@ -28,7 +28,7 @@
     >
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/level_text"
         style="@style/BoB.Group.Level1.Label"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/cbx_is_complete"
@@ -42,7 +42,7 @@
         android:id="@+id/cbx_is_complete"
         style="@style/Flag.Complete"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/name"
+        app:layout_constraintBottom_toBottomOf="@id/level_text"
         app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="ContentDescription"
         tools:visibility="visible"
