--- a/app/src/main/res/values/styles-bob.xml
+++ b/app/src/main/res/values/styles-bob.xml
@@ -59,27 +59,10 @@
     <!-- *************************************************************************************** -->
 
     <!-- The Group rows labels for (generic string) level 1..3 in the booklist. -->
-    <style name="Base.BoB.Group.Label" parent="Widget.MaterialComponents.TextView">
+    <style name="BoB.Group.Label" parent="Widget.MaterialComponents.TextView">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:textIsSelectable">false</item>
-    </style>
-
-    <style name="BoB.Group.Level1.Label" parent="Base.BoB.Group.Label">
-        <item name="android:textStyle">bold</item>
-        <item name="android:textAppearance">?attr/textAppearanceTitleLarge</item>
-    </style>
-
-    <style name="BoB.Group.Level2.Label" parent="Base.BoB.Group.Label">
-        <item name="android:drawableStart">@drawable/ic_bob_group_level_2</item>
-        <item name="android:drawablePadding">@dimen/bob_group_level_bullet_padding</item>
-        <item name="android:textAppearance">?attr/textAppearanceTitleMedium</item>
-    </style>
-
-    <style name="BoB.Group.Level3.Label" parent="Base.BoB.Group.Label">
-        <item name="android:drawableStart">@drawable/ic_bob_group_level_3</item>
-        <item name="android:drawablePadding">@dimen/bob_group_level_bullet_padding</item>
-        <item name="android:textAppearance">?attr/textAppearanceTitleSmall</item>
     </style>
 
     <!-- The content container/row for a book in the booklist. -->
