--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -151,6 +151,9 @@
     <dimen name="bob_group_level_padding_start">8dp</dimen>
     <dimen name="bob_group_level_bullet_padding">4dp</dimen>
 
+    <dimen name="bob_group_level_2_drawable_size">10dp</dimen>
+    <dimen name="bob_group_level_3_drawable_size">6dp</dimen>
+
     <!-- on larger screens we'll add a paddingEnd to allow easier scrolling.
          The width of the scrollbar "android.R.attr.fastScrollTrackDrawable" is 8dp
     -->
