explicitly setting style on MaterialDivider

--- a/app/src/main/res/layout/dialog_edit_book_author.xml
+++ b/app/src/main/res/layout/dialog_edit_book_author.xml
@@ -145,6 +145,7 @@
 
 
             <com.google.android.material.divider.MaterialDivider
+                style="@style/Widget.Material3.MaterialDivider"
                 android:id="@+id/barrier_types_top"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
