--- a/app/src/main/res/layout/fragment_edit_book_external_id.xml
+++ b/app/src/main/res/layout/fragment_edit_book_external_id.xml
@@ -156,6 +156,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.divider.MaterialDivider
+            style="@style/Widget.Material3.MaterialDivider"
             android:id="@+id/barrier_ext_id"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
