--- a/app/src/main/res/layout/fragment_export.xml
+++ b/app/src/main/res/layout/fragment_export.xml
@@ -100,6 +100,7 @@
             />
 
         <com.google.android.material.divider.MaterialDivider
+            style="@style/Widget.Material3.MaterialDivider"
             android:id="@+id/formatDivider"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
