--- a/app/src/main/res/layout/row_simple_list_divider.xml
+++ b/app/src/main/res/layout/row_simple_list_divider.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2021 HardBackNutter
+  ~ @Copyright 2018-2022 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -37,6 +37,7 @@
     >
 
     <com.google.android.material.divider.MaterialDivider
+        style="@style/Widget.Material3.MaterialDivider"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         />
